--- a/asha2.html
+++ b/asha2.html
@@ -16,9 +16,9 @@
 <b>Adding a hyperlink to an Image:</b>
 <p></p>
 <a href="http://www.wikipedia.com">
-<img alt="The Moon" height="225" src="img\img1.png" width="224" title="flower" /></a>
+<img alt="The Moon" height="225" src="img1.png" width="224" title="flower" /></a>
 <a href="http://www.wikipedia.com">
-<img src="img\img2.png" alt="flower" width="224" height="225" title="This is the Earth" /></a>
+<img src="img2.png" alt="flower" width="224" height="225" title="This is the Earth" /></a>
 <p></p>
 <b>Creating Lists:</b>
 <ul>
@@ -38,7 +38,7 @@
 <dt>Sun</dt>
 <dd>The Sun is our nearest Star</dd>
 <dt>Mars</dt>
-<dd>Mars is the next Goldilocks’ planet</dd>
+<dd>Mars is the next Goldilocksâ€™ planet</dd>
 <dt>Earth</dt>
 <dd>Eath is or Home</dd>
 </dl>
